# RRChat

./: README.md
actix_websockets/: Cargo.toml
actix_websockets/cert/: cert.pem  key.pem
actix_websockets/cert/CA/: key.crt  key.csr  key.pem  keyStore.p12  myCA.key  myCA.pem
actix_websockets/src/: lobby.rs  main.rs  messages.rs  signalsocket.rs  start_connection.rs  videolobby.rs  websocket.rs
livelyChat/: .env  README.md  package-lock.json  package.json  vite.config.ts
livelyChat/src/: App.tsx  ChatRoom.tsx  Video.tsx  VideoChatRoom.tsx  main.tsx
livelyChat/src/assets/cert/: cert.pem  key.pem
livelyChat/src/assets/styles/: App.scss  Buttons.scss  ChatRoom.scss  Grid.scss  Inputs.scss  Variables.scss  VideoChatRoom.scss  index.scss
